# nnusf

./: .buildinfo  .gitattributes  .gitignore  .pre-commit-config.yaml  .zenodo.json  README.md  badges.html  fit_runcard.yml  genindex.html  index.html  integrate.py  objects.inv  plot_runcard.yml  pyproject.toml  search.html  searchindex.js
.github/workflows/: deploy_docs.yml  pypi.yml  runfitbot.yml  unittests.yml
_sources/: index.rst.txt
_sources/delivery/: lhapdf.rst.txt  nn_model.rst.txt  scripts.rst.txt
_sources/quickstart/: description.rst.txt  installation.rst.txt
_sources/tutorials/: datasets.rst.txt  fitting.rst.txt  yadism.rst.txt
bodek-yang/: pyproject.toml
bodek-yang/src/bodek_yang/: __init__.py  cli.py  cuts.py  genie.hdf5  grids.py  load.py  predictions.py  runcards.py  utils.py
bodek-yang/tests/: test_bodek_yang.py
coefficients/: BEBCWA59_F2.npy  BEBCWA59_F2_MATCHING.npy  BEBCWA59_F3.npy  BEBCWA59_F3_MATCHING.npy  CCFR_F2.npy  CCFR_F2_MATCHING.npy  CCFR_F3.npy  CCFR_F3_MATCHING.npy  CDHSW_DXDYNUB.npy  CDHSW_DXDYNUB_MATCHING.npy  CDHSW_DXDYNUU.npy  CDHSW_DXDYNUU_MATCHING.npy  CDHSW_F2.npy  CDHSW_F2_MATCHING.npy  CDHSW_F3.npy  CDHSW_F3_MATCHING.npy  CDHSW_FW.npy  CDHSW_FW_MATCHING.npy  CHARM_F2.npy  CHARM_F3.npy  CHORUS_DXDYNUB.npy  CHORUS_DXDYNUB_MATCHING.npy  CHORUS_DXDYNUU.npy  CHORUS_DXDYNUU_MATCHING.npy  CHORUS_F2.npy  CHORUS_F2_MATCHING.npy  CHORUS_F3.npy  CHORUS_F3_MATCHING.npy  NUTEV_DXDYNUB.npy  NUTEV_DXDYNUB_MATCHING.npy  NUTEV_DXDYNUU.npy  NUTEV_DXDYNUU_MATCHING.npy  NUTEV_F2.npy  NUTEV_F2_MATCHING.npy  NUTEV_F3.npy  NUTEV_F3_MATCHING.npy  PROTONBC_DXDYNUB_MATCHING.npy  PROTONBC_DXDYNUU_MATCHING.npy  PROTONBC_F2_MATCHING.npy  PROTONBC_F3_MATCHING.npy
commondata/: combined_tables.csv  matching-grids.yml
commondata/data/: DATA_BEBCWA59_F2_MATCHING.csv  DATA_BEBCWA59_F3_MATCHING.csv  DATA_CCFR_F2_MATCHING.csv  DATA_CCFR_F3_MATCHING.csv  DATA_CDHSW_DXDYNUB_MATCHING.csv  DATA_CDHSW_DXDYNUU_MATCHING.csv  DATA_CDHSW_F2_MATCHING.csv  DATA_CDHSW_F3_MATCHING.csv  DATA_CDHSW_FW_MATCHING.csv  DATA_CHARM_F2_MATCHING.csv  DATA_CHARM_F3_MATCHING.csv  DATA_CHORUS_DXDYNUB.csv  DATA_CHORUS_DXDYNUB_MATCHING.csv  DATA_CHORUS_DXDYNUU.csv  DATA_CHORUS_DXDYNUU_MATCHING.csv  DATA_CHORUS_F2_MATCHING.csv  DATA_CHORUS_F3_MATCHING.csv  DATA_NUTEV_DXDYNUB_MATCHING.csv  DATA_NUTEV_DXDYNUU_MATCHING.csv  DATA_NUTEV_F2_MATCHING.csv  DATA_NUTEV_F3_MATCHING.csv  DATA_PROTONBC_DXDYNUB_MATCHING.csv  DATA_PROTONBC_DXDYNUU_MATCHING.csv  DATA_PROTONBC_F2_MATCHING.csv  DATA_PROTONBC_F3_MATCHING.csv
commondata/filters/: filter_bebcwa59.py  filter_ccfr.py  filter_cdhsw.py  filter_charm.py  filter_chorus.py  filter_nutev.py  utils.py
commondata/info/: BEBCWA59.csv  CCFR.csv  CDHSW.csv  CHARM.csv  CHORUS.csv  NUTEV.csv
commondata/kinematics/: KIN_BEBCWA59_F2F3.csv  KIN_BEBCWA59_MATCHING_F2F3.csv  KIN_CCFR_F2F3.csv  KIN_CDHSW_DXDYNUB.csv  KIN_CDHSW_DXDYNUU.csv  KIN_CDHSW_F2F3.csv  KIN_CDHSW_FW.csv  KIN_CDHSW_MATCHING_DXDY.csv  KIN_CDHSW_MATCHING_F2F3.csv  KIN_CHARM_F2F3.csv  KIN_CHORUS_DXDY.csv  KIN_CHORUS_F2F3.csv  KIN_CHORUS_MATCHING_DXDY.csv  KIN_CHORUS_MATCHING_F2F3.csv  KIN_MATCHING_FX.csv  KIN_MATCHING_XSEC.csv  KIN_NUTEV_DXDYNUB.csv  KIN_NUTEV_DXDYNUU.csv  KIN_NUTEV_F2.csv  KIN_NUTEV_F3.csv  KIN_NUTEV_MATCHING_DXDY.csv  KIN_NUTEV_MATCHING_F2F3.csv  KIN_PROTONBC_FX.csv  KIN_PROTONBC_MATCHING_DXDY.csv  KIN_PROTONBC_MATCHING_F2F3.csv  KIN_PROTONBC_XSEC.csv
commondata/matching/: BEBCWA59_F2_MATCHING_xif0.5_xir0.5.npy  BEBCWA59_F2_MATCHING_xif0.5_xir1.0.npy  BEBCWA59_F2_MATCHING_xif0.5_xir1.npy  BEBCWA59_F2_MATCHING_xif1.0_xir0.5.npy  BEBCWA59_F2_MATCHING_xif1.0_xir1.0.npy  BEBCWA59_F2_MATCHING_xif1.0_xir2.0.npy  BEBCWA59_F2_MATCHING_xif1_xir0.5.npy  BEBCWA59_F2_MATCHING_xif1_xir1.npy  (+287 more)
delivery/: lhapdf.html  nn_model.html  scripts.html
docs/: Makefile  _coverpage.md  _sidebar.md  by.md  docs-requirements.txt  home.md  index.html  install.md  prefit.md  runfit.md  sf_to_txt.py  yadism.md
pdfs_lo/: nu_sf_lo.py  nu_sf_lo_Qdep.py  nu_sf_lo_xdep.py  scheme_q2dep.py  sf_to_txt.py
quickstart/: description.html  installation.html
runcards/: bot_runcard.yml  check_effcharge.yml  check_gls_sumrule.yml  check_sumrules.yml  fit_runcard.yml  generate_predictions.yml  generate_sfasx.yml  hyperopt_runcard.yml  plot_runcard.yml  sfs_lhapdf.yml
sffit/: model_gen.py  observable.py  runcard.yml  temp_data.py  test.py  test_file.py
tests/: test_bodek_yang.py  test_loader.py
tutorials/: datasets.html  fitting.html  yadism.html
validation/: PDFs_xdep_UHE.py  PDFs_xdep_iso.py  nPDFs-SFs.py  nPDFs-simple.py  nPDFs.py  sf_Qdep.py  sf_Qdep_variations.py  sf_xQdep.py  sf_xdep.py  sf_xdep_UHE.py
yad_bench/: plot_bench.py  run_bench.py  style.yaml
(+293 files in other folders)
