[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "nnusf"
version = "0.1.0"
description = ""
authors = ["Alessandro Candido <candido.ale@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9,<3.11"
h5py = "^3.7.0"
PyYAML = "^6.0"
yadism = { version = "^0.11.0", extras = ["pineappl", "mark"] }
pineappl = "^0.5.0"
a3b2bbc3ced97675ac3a71df45f55ba = "^6.4.0"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^8.4.0"
pdbpp = "^0.10.3"

[tool.poetry.scripts]
bygen = "nnusf.bodek_yang:command"

[tool.poe.tasks]
by = "bygen"
